--- a/project-motion/package.json
+++ b/project-motion/package.json
@@ -17,10 +17,11 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "prettier": "^2.3.2",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "webpack-cli": "^4.7.2"
   },
   "dependencies": {
     "gh-pages": "^3.2.3"
   },
-  "homepage": "https://youngminss.github.io/DreamCoding-Typescript_OOP/"
+  "homepage": "https://youngminss.github.io/DreamCoding-Typescript_OOP"
 }
